<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    app:contentPadding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/linear_layout"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDoaHarian"
            android:text="@string/doa_harian"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/green_dark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/expandable_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvHurufArab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/niat"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:justificationMode="inter_word"/>

                <TextView
                    android:id="@+id/tvHurufLatin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latin"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:justificationMode="inter_word"/>

                <TextView
                    android:id="@+id/tvTerjemahan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terjemahan"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:justificationMode="inter_word"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>