<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/union1"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:layout_marginTop="120dp"
            android:textSize="60sp"
            android:textStyle="bold"
            android:textColor="#426B75"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="90dp"
            android:padding="20dp">

            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:id="@+id/login_username"
                android:background="@drawable/green_border"
                android:padding="8dp"
                android:hint="@string/username"
                android:drawableStart="@drawable/person_24"
                android:drawablePadding="8dp"/>

            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:id="@+id/login_password"
                android:background="@drawable/green_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:drawableStart="@drawable/lock_24"
                android:drawablePadding="8dp"/>

            <Button
                android:layout_width="350dp"
                android:layout_height="65dp"
                android:text="@string/login"
                android:id="@+id/login_button"
                android:textSize="18sp"
                android:textColor="@color/green_soft"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/white"
                app:cornerRadius="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signupRedirectText"
                android:text="@string/belum_punya_akun_signup"
                android:layout_gravity="center"
                android:padding="8dp"
                android:textSize="18sp"
                android:layout_marginTop="14dp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>