<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/union2"
    android:padding="10dp"
    tools:context=".Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:drawableLeftCompat="@drawable/baseline_mosque_24" />

        <TextView
            android:id="@+id/tvHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/hai_hamba_allah"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#226B78" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mari_tingkatkan_imanmu"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/container">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <ImageButton
                    android:id="@+id/btnNiatSholat"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="10dp"
                    android:scaleType="centerCrop"
                    android:background="@null"
                    android:src="@drawable/niat_sholat"/>

                <TextView
                    android:id="@+id/tvniat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnNiatSholat"
                    android:text="@string/niat_sholat"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="30dp"/>

                <ImageButton
                    android:id="@+id/btnBacaanSholat"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_toEndOf="@id/btnNiatSholat"
                    android:layout_marginStart="40dp"
                    android:scaleType="centerCrop"
                    android:background="@null"
                    android:src="@drawable/bacaan_sholat"/>

                <TextView
                    android:id="@+id/tvBacaan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnBacaanSholat"
                    android:layout_toEndOf="@id/tvniat"
                    android:text="@string/bacaan_sholat"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="67dp"/>

                <ImageButton
                    android:id="@+id/btnDoaHarian"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_below="@id/tvniat"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="25dp"
                    android:scaleType="centerCrop"
                    android:background="@null"
                    android:src="@drawable/doa_harian"/>

                <TextView
                    android:id="@+id/tvdoa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnDoaHarian"
                    android:text="@string/doa_harian"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="32dp"/>

                <ImageButton
                    android:id="@+id/btnDzikir"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_below="@id/tvBacaan"
                    android:layout_toEndOf="@id/btnDoaHarian"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="25dp"
                    android:scaleType="centerCrop"
                    android:background="@null"
                    android:src="@drawable/ayat_kursi"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnDzikir"
                    android:layout_toEndOf="@id/tvdoa"
                    android:text="@string/zikir_setelah_sholat"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="2dp"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>